[package]
name = "invaders"
version = "0.1.0"
authors = ["Hendro Wibowo <hendrothemail@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rusty_audio = "1.1.4"
rusty_time = "0.11.0"
anyhow = "1.0.75"